fixed header z-index

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,6 +13,7 @@
     background-color: #111111;
     position: sticky;
     top: 0;
+    z-index: 100000;
 }
 
 .navbar ul {
